<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">JBClient</string>
    <string name="action_settings">Settings</string>
    <string name="player_title">Player</string>
    <string name="settings_title">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string-array name="planets_array">
        <item>Player</item>
        <item>Settings</item>
    </string-array>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>

    <string name="pref_server_title">Server</string>
    <string name="pref_server_url_title">URL</string>
    <string name="pref_server_url_summary">Root of the server url</string>
    <string name="pref_server_port_title">Port</string>
    <string name="pref_server_port_summary">Port the server listens to</string>

    <string name="pref_auth_title">Authentication</string>
    <string name="pref_auth_login_title">Login</string>
    <string name="pref_auth_login_summary">Jukebox login</string>
    <string name="pref_auth_password_title">Password</string>
    <string name="pref_auth_password_summary">Jukebox password</string>

</resources>
