<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/pref_server_title"
        android:key="pref_key_server_settings">
        <EditTextPreference
            android:key="pref_key_server_url"
            android:title="@string/pref_server_url_title"
            android:summary="@string/pref_server_url_summary"
            android:defaultValue="jukebox.server.com"
            android:autoText="true"/>
        <EditTextPreference
            android:key="pref_key_server_port"
            android:title="@string/pref_server_port_title"
            android:summary="@string/pref_server_port_summary"
            android:defaultValue="80"
            android:numeric="integer" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_auth_title"
        android:key="pref_key_auth_settings">
        <EditTextPreference
            android:key="pref_key_auth_login"
            android:title="@string/pref_auth_login_title"
            android:summary="@string/pref_auth_login_summary"
            android:defaultValue="login" />
        <EditTextPreference
            android:key="pref_key_auth_password"
            android:title="@string/pref_auth_password_title"
            android:summary="@string/pref_auth_password_summary"
            android:defaultValue=""
            android:password="true" />
        </PreferenceCategory>
</PreferenceScreen>